--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,9 +54,9 @@
   	</footer>
 	
 	<!-- Scripts -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.fittext.js"></script>
+	<script src="js/vendor/jquery.min-1.11.0"></script>
+	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
+	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
 		$(".text1").fitText(2.0);
