malditos typos !! copiê-colê FTL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -54,10 +54,10 @@
   	</footer>
 	
 	<!-- Scripts -->
-	<script src="js/vendor/jquery.min-1.11.0"></script>
+	<script src="js/vendor/jquery.min-1.11.0.js"></script>
 	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
-	<script src="js/vendor/jquery.rss-1.4.1.js"></script>
+	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
 		$(".text1").fitText(2.0);
