--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,9 +39,10 @@
 					</ul>
 					<div class="newslwtter">
 						<p>Receba nossa newsletter:</p>
-						<form id="form-newsletter" method="post" action="">
-							<input type="text" name="email" id="email" placeholder="seu e-mail" autocomplete="off"> 
-							<button id="send" class="send"><span class="ico-mail"></span></button>
+						<form id="form-newsletter">
+							<input type="text" name="email" id="mc-email" placeholder="seu e-mail" autocomplete="off"> 
+							<label for="mc-email"></label>
+							<button id="send" type="submit" class="send"><span class="ico-mail"></span></button>
 						</form>
 						<p class="info"></p>
 					</div>
@@ -58,10 +59,16 @@
 	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
+	<script src="js/vendor/jquery.ajaxchimp.min-1.3.0.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
+		// Lista Oficial
+		$('#form-newsletter').ajaxChimp({
+		    url: 'http://concretesolutions.us5.list-manage1.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=26dd60f3a9'
+		});
 		$(".text1").fitText(2.0);
 		$(".text2").fitText(2.6);
+
 		{% if page.is_index == true %}
 		$("#blog-content").rss("http://blog.concretesolutions.com.br/feed/atom/", {
 	    limit: 2,
@@ -75,6 +82,7 @@
 	    }
 		});
 		{% endif %}
+
 	</script>
 </body>
 </html>
