--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,10 +39,20 @@
 					</ul>
 					<div class="newslwtter">
 						<p>Receba nossa newsletter:</p>
-						<form id="form-newsletter">
-							<input type="text" name="email" id="mc-email" placeholder="seu e-mail" autocomplete="off"> 
-							<label for="mc-email"></label>
+						<form action="http://concretesolutions.us5.list-manage1.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=26dd60f3a9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<div class="mc-field-group">
+								<input type="text" name="EMAIL" id="mce-EMAIL" placeholder="seu e-mail" autocomplete="off"> 
+								<label for="mce-EMAIL"></label>
+							</div>
 							<button id="send" type="submit" class="send"><span class="ico-mail"></span></button>
+						</form>
+						
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 						</form>
 						<p class="info"></p>
 					</div>
@@ -59,7 +69,7 @@
 	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
-	<script src="js/vendor/jquery.ajaxchimp.min-1.3.0.js"></script>
+	<script src="js/mailchimp.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
 		// Lista Oficial
