removendo lixo no HTML

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,22 +37,20 @@
 						<li><a class="linkedin" href="http://www.linkedin.com/companies/concrete-solutions" target="_blank"></a></li>
 						<li><a class="youtube" href="https://www.youtube.com/user/concretesolutionsbr" target="_blank"></a></li>
 					</ul>
-					<div class="newslwtter">
+					<div class="newsletter">
 						<p>Receba nossa newsletter:</p>
 						<form action="http://concretesolutions.us5.list-manage1.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=26dd60f3a9" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 							<div class="mc-field-group">
 								<input type="text" name="EMAIL" id="mce-EMAIL" placeholder="seu e-mail" autocomplete="off"> 
 								<label for="mce-EMAIL"></label>
 							</div>
-							<button id="send" type="submit" class="send"><span class="ico-mail"></span></button>
-						</form>
-						
+							<div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
 							<div id="mce-responses" class="clear">
 								<div class="response" id="mce-error-response" style="display:none"></div>
 								<div class="response" id="mce-success-response" style="display:none"></div>
 							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-						    <div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
-						    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							<div style="position: absolute; left: -5000px;"><input type="text" name="b_0dd8265cc74731cec0c149863_26dd60f3a9" tabindex="-1" value=""></div>
+							<button id="mc-embedded-subscribe" type="submit" class="send"><span class="ico-mail"></span></button>
 						</form>
 						<p class="info"></p>
 					</div>
@@ -72,10 +70,7 @@
 	<script src="js/mailchimp.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
-		// Lista Oficial
-		$('#form-newsletter').ajaxChimp({
-		    url: 'http://concretesolutions.us5.list-manage1.com/subscribe/post?u=0dd8265cc74731cec0c149863&amp;id=26dd60f3a9'
-		});
+
 		$(".text1").fitText(2.0);
 		$(".text2").fitText(2.6);
 
