tentativa de usar jQuery mobile :)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,6 +67,7 @@
 	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
 	<script src="js/mailchimp.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
@@ -85,6 +86,13 @@
 	            return date.toLocaleDateString("pt-BR");
 	        }
 	    }
+		});
+
+		$("#carousel-example-generic").on("swipeleft",function(event){
+			this.carousel('next');
+		});
+		$("#carousel-example-generic").on("swiperight",function(event){
+			this.carousel('prev');
 		});
 		{% endif %}
 
