--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -88,13 +88,14 @@
 	    }
 		});
 
-		$(".JS-swipe")
-		.on("swipeleft",function(event){
-			$("#carousel-example-generic").carousel('next');
-		})
-		.on("swiperight",function(event){
-			$("#carousel-example-generic").carousel('prev');
-		});
+		$(document).ready(function() {  
+	  		 $("#carousel-example-generic").swiperight(function() {  
+	    		 $(this).carousel('prev');  
+	    		});  
+		    $("#carousel-example-generic").swipeleft(function() {  
+		      	$(this).carousel('next');  
+	   	});  
+	});  
 		{% endif %}
 
 	</script>
