--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -67,7 +67,7 @@
 	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+	<script src="js/vendor/jgestures.min-0.90.js"></script>
 	<script src="js/mailchimp.js"></script>
 	<script src="js/concrete.js"></script>
 	<script type="text/javascript">
@@ -89,11 +89,9 @@
 		});
 
 		$(document).ready(function() {  
-	  		 $("#carousel-example-generic").swiperight(function() {  
-	    		 $(this).carousel('prev');  
-	    		});  
-		    $("#carousel-example-generic").swipeleft(function() {  
-		      	$(this).carousel('next');  
+	  		 $("#carousel-example-generic")
+	  		 .bind('swipeleft',function(){this.carousel('next');})
+	  		 .bind('swiperight',function(){this.carousel('prev');});
 	   	});  
 	});  
 		{% endif %}
