--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 	<section id="call-action">
 		<div class="container">
 			<h2 class="text-call-action">Vamos fazer o produto digital certo!</h2>
-			<a href="mailto:recrutamentosp@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
+			<a href="mailto:comercial@concretesolutions.com.br" class="btn-lg btn-master text-button">fale conosco</a>
 		</div>
 	</section>
 	<footer>
@@ -37,8 +37,8 @@
 						<li><a class="linkedin" href="http://www.linkedin.com/companies/concrete-solutions" target="_blank"></a></li>
 						<li><a class="youtube" href="https://www.youtube.com/user/concretesolutionsbr" target="_blank"></a></li>
 					</ul>
-					<div class="newslwtter">
-						<p>Receba nossa newsletter:</p>
+					<div class="newsletter">
+						<p>Receba nossa newsletter</p>
 						<form id="form-newsletter" method="post" action="">
 							<input type="text" name="email" id="email" placeholder="seu e-mail" autocomplete="off"> 
 							<button id="send" class="send"><span class="ico-mail"></span></button>
@@ -58,6 +58,16 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.fittext.js"></script>
 	<script src="js/concrete.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-532914-1', 'concretesolutions.com.br');
+	  ga('send', 'pageview');
+
+	</script>
 	<script type="text/javascript">
 		$(".text1").fitText(2.0);
 		$(".text2").fitText(2.6);
