--- a/css/style.css
+++ b/css/style.css
@@ -331,10 +331,12 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 .space{padding-left: 5% !important;}
 .fix{padding: 0 0 0 35px; display: inline-block; clear: both;}
 .cloud{display: inline-block; clear: both;}
+
+/*-------------------TEAM--------------------*/
 .team{display: block;}
 .team li{display: inline-block; padding: 50px 50px 0 50px;}
-.team li a:hover img{opacity: 0.5;}
-.team li h3{font-family: "Oswald"; font-size: 18px; text-transform: uppercase; text-align: center;}
+/*.team li a:hover img{opacity: 0.5;}
+*/.team li h3{font-family: "Oswald"; font-size: 18px; text-transform: uppercase; text-align: center;}
 .team li h6{font-weight: 300px; font-style: italic; font-size: 12px; text-transform: uppercase; text-align: center;}
 
 /*-----------------------------------------------*/
