--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Site CS | Consultoria de ti global especializada em desenvolver negócios digitais</title>
+	<title>Concrete Solutions</title>
 
 	<meta name="description" content="Consultoria de ti global especializada em desenvolver negócios digitais">
     <link rel="profile" href="http://gmpg.org/xfn/11">
