--- a/css/style.css
+++ b/css/style.css
@@ -339,10 +339,10 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 /*-------------------TEAM--------------------*/
 .team{display: block;}
 .team li{display: inline-block; padding: 50px 50px 0 50px;}
-/*.team li a:hover img{opacity: 0.5;}
-*/.team li h3{font-family: "Oswald"; font-size: 18px; text-transform: uppercase; text-align: center;}
+.team li a:hover img{opacity: 0.5; cursor: pointer;}
+.team li h3{font-family: "Oswald"; font-size: 18px; text-transform: uppercase; text-align: center;}
 .team li h6{font-weight: 300px; font-style: italic; font-size: 12px; text-transform: uppercase; text-align: center;}
-.tooltip-inner{text-align: left !important;  font-size: 14px; font-weight: 300; padding: 20px !important; max-width: 320px !important;}
+.popover{text-align: justify !important;  font-size: 14px; font-weight: 300; padding: 10px 5px !important; max-width: 350px !important;}
 
 /*-----------------------------------------------*/
 
