--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,8 @@ footer{background-color:#575656; padding: 40px 0 20px 0; color: #fff;}
 .team li a:hover img{opacity: 0.5; cursor: pointer;}
 .team li h3{font-family: "Oswald"; font-size: 18px; text-transform: uppercase; text-align: center;}
 .team li h6{font-weight: 300px; font-style: italic; font-size: 12px; text-transform: uppercase; text-align: center;}
-.popover{text-align: justify !important;  font-size: 14px; font-weight: 300; padding: 10px 5px !important; max-width: 350px !important;}
+.popover{color: #fff !important; text-align: justify !important;  font-size: 14px; font-weight: 300; padding: 10px 5px !important; max-width: 350px !important; background-color: #000 !important;}
+.popover.bottom>.arrow:after {border-bottom-color: #000 !important;}
 
 /*-----------------------------------------------*/
 
