--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -58,6 +58,15 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery.fittext.js"></script>
 	<script src="js/concrete.js"></script>
+	<script src="js/jquery.stellar.js"></script>
+	<script>
+		$(function(){
+			$.stellar({
+				horizontalScrolling: false,
+				verticalOffset: 40
+			});
+		});
+	</script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
