--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -66,11 +66,11 @@
 	<script src="js/vendor/jquery.fittext-1.2.js"></script>
 	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
 	<script src="js/vendor/jquery.touchswipe.min-1.6.5.js"></script>
-	<script src="js/vendor/jquery.stellar.js"></script>
+	<script src="js/vendor/jquery.stellar-0.6.2.js"></script>
 	<script src="js/GCalEvents.js"></script>
 	<script src="js/mailchimp.js"></script>
 	<script src="js/concrete.js"></script>
-	
+
 	<script type="text/javascript" charset="utf-8">
 		$(function(){
 			$.stellar({
