--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,15 +61,15 @@
   	</footer>
 	
 	<!-- Scripts -->
-	<script src="js/vendor/jquery.min-1.11.0.js"></script>
-	<script src="js/vendor/bootstrap.min-3.1.1.js"></script>
-	<script src="js/vendor/jquery.fittext-1.2.js"></script>
-	<script src="js/vendor/jquery.rss.min-1.4.1.js"></script>
-	<script src="js/vendor/jquery.touchswipe.min-1.6.5.js"></script>
-	<script src="js/vendor/jquery.stellar-0.6.2.js"></script>
-	<script src="js/GCalEvents.js"></script>
-	<script src="js/mailchimp.js"></script>
-	<script src="js/concrete.js"></script>
+	<script src="/js/vendor/jquery.min-1.11.0.js"></script>
+	<script src="/js/vendor/bootstrap.min-3.1.1.js"></script>
+	<script src="/js/vendor/jquery.fittext-1.2.js"></script>
+	<script src="/js/vendor/jquery.rss.min-1.4.1.js"></script>
+	<script src="/js/vendor/jquery.touchswipe.min-1.6.5.js"></script>
+	<script src="/js/vendor/jquery.stellar-0.6.2.js"></script>
+	<script src="/js/GCalEvents.js"></script>
+	<script src="/js/mailchimp.js"></script>
+	<script src="/js/concrete.js"></script>
 
 	<script type="text/javascript" charset="utf-8">
 		$(function(){
