--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,16 +7,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="Concrete Solutions"></a>
+      <a class="navbar-brand" href="/index.html"><img src="/img/logo.png" alt="Concrete Solutions"></a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-right navbar-nav navbar-link">
-        <li><a href="quem-somos.html">Quem somos</a></li>
-        <li><a href="o-que-fazemos.html">O que fazemos</a></li>
-        <li><a href="clientes.html">Clientes</a></li>
+        <li><a href="/quem-somos">Quem somos</a></li>
+        <li><a href="/o-que-fazemos">O que fazemos</a></li>
+        <li><a href="/clientes">Clientes</a></li>
         <li><a href="http://blog.concretesolutions.com.br/" target="_blank">Blog</a></li>
-        <li><a href="carreira.html">Carreira</a></li>
-        <li><a href="contato.html">Contato</a></li>
+        <li><a href="/carreira">Carreira</a></li>
+        <li><a href="/contato">Contato</a></li>
       </ul>
     </div>
   </div>
