--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Concrete Solutions</title>
-
-	<meta name="description" content="Consultoria de ti global especializada em desenvolver negócios digitais">
+	<meta name="description" content="Concrete Solutions">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="shortcut icon" href="/img/ico.ico">
 	<link type="text/css" rel="stylesheet" href="/css/style.css">
