--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/index.html"><img src="/img/logo.png" alt="Concrete Solutions"></a>
+      <a class="navbar-brand" href="/"><img src="/img/logo.png" alt="Concrete Solutions"></a>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-right navbar-nav navbar-link">
