--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-right navbar-nav navbar-link">
-        <li><a href="{{ site.url }}/quem-somos">Quem somos</a></li>
+        <li><a href="{{ site.baseurl }}/quem-somos">Quem somos</a></li>
         <li><a href="/o-que-fazemos">O que fazemos</a></li>
         <li><a href="/clientes">Clientes</a></li>
         <li><a href="http://blog.concretesolutions.com.br/" target="_blank">Blog</a></li>
