--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,9 +7,9 @@
 	<title>Concrete Solutions</title>
 	<meta name="description" content="Concrete Solutions">
     <link rel="profile" href="http://gmpg.org/xfn/11">
-	<link rel="shortcut icon" href="/img/ico.ico">
-	<link type="text/css" rel="stylesheet" href="/css/style.css">
-	<link type="text/css" rel="stylesheet" href="/css/vendor/bootstrap.min-3.1.1.css">
+	<link rel="shortcut icon" href="../img/ico.ico">
+	<link type="text/css" rel="stylesheet" href="../css/style.css">
+	<link type="text/css" rel="stylesheet" href="../css/vendor/bootstrap.min-3.1.1.css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
